--- a/Applications/ParaView/Testing/XML/server_rc.sh.in
+++ b/Applications/ParaView/Testing/XML/server_rc.sh.in
@@ -1,1 +1,4 @@
-DISPLAY=:0 @ParaView_BINARY_DIR@/bin/pvserver -rc -ch=$1 -sp=$2 | tee sshServer.log
+#make sure no pvserver are running
+killall pvserver
+
+DISPLAY=:0 @ParaView_BINARY_DIR@/bin/pvserver -rc -ch=$1 -sp=$2 --timeout=1 | tee sshServer.log
