Add support to create links with Representations and their properties
So far, only Views and Sources were supported in the Link Editor dialog.
We are adding support for Representations as well.

--- a/Applications/ParaView/Testing/XML/CMakeLists.txt
+++ b/Applications/ParaView/Testing/XML/CMakeLists.txt
@@ -740,6 +740,7 @@ list(APPEND TESTS_WITH_BASELINES
   InteractiveViewLinkState.xml
   LightWidget.xml
   LinesAsTubes.xml
+  LinkRepresentationProperties.xml
   LoadPartiallyUpdatedStateFiles.xml
   LoadSaveStateAnimation.xml
   LoadState.xml
