--- a/ParaViewCore/VTKExtensions/Default/CMakeLists.txt
+++ b/ParaViewCore/VTKExtensions/Default/CMakeLists.txt
@@ -72,6 +72,7 @@ set(classes
   vtkMergeArrays
   vtkMergeCompositeDataSet
   vtkMinMax
+  vtkOMETIFFChannelCalculator
   vtkPEnSightGoldBinaryReader
   vtkPEnSightGoldReader
   vtkPEnSightReader
