Fixing CellSize filter to work and a comment typo.
The CellSize filter doesn't work because ParaView wasn't enabling
the VTK::FiltersParallelVerdict module.

(cherry picked from commit bddd0647fad1160f85cf5e58d3476e2027ea0ef8)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -539,8 +539,9 @@ list(APPEND paraview_requested_modules
   ParaView::VTKExtensionsPoints
   ParaView::WrapClientServer
   VTK::FiltersFlowPaths
+  VTK::FiltersParallelDIY2
+  VTK::FiltersParallelVerdict
   VTK::FiltersTexture
-  VTK::FiltersVerdict
   VTK::IOAMR
   VTK::IOAsynchronous # needed for cinema, but no harm adding always.
   VTK::IOH5part
