adding Datamine readers plugin
Adding a contributed plugin for Datamine readers. The reader has been
released under BSD license by the original author (Jeremy Maccelari).

--- a/CMake/CTestCustom.cmake.in
+++ b/CMake/CTestCustom.cmake.in
@@ -14,6 +14,9 @@ list(APPEND CTEST_CUSTOM_WARNING_EXCEPTION
 
   # Unreachable code in xutility causes C4702 warnings in MSVC.
   "xutility.*unreachable code"
+
+  # exclude warnings from dmfile.cxx
+  "dmfile.*"
   )
 
 # Regular expression for excluding files from coverage testing
