--- a/Examples/Plugins/ElevationFilter/Plugin/CMakeLists.txt
+++ b/Examples/Plugins/ElevationFilter/Plugin/CMakeLists.txt
@@ -2,3 +2,7 @@ paraview_add_plugin(ElevationFilter
   VERSION "1.0"
   MODULES ElevationFilters
   MODULE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/ElevationFilters/vtk.module")
+
+if (BUILD_TESTING)
+  add_subdirectory(Testing)
+endif()
