Adding A Python testing example to ElevationFilter example

--- a/Examples/Plugins/ElevationFilter/Plugin/CMakeLists.txt
+++ b/Examples/Plugins/ElevationFilter/Plugin/CMakeLists.txt
@@ -3,6 +3,7 @@ paraview_add_plugin(ElevationFilter
   MODULES ElevationFilters
   MODULE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/ElevationFilters/vtk.module")
 
+option(BUILD_TESTING "Build Plugin Testing" OFF)
 if (BUILD_TESTING)
   add_subdirectory(Testing)
 endif()
