--- a/Examples/Plugins/ElevationFilter/CMakeLists.txt
+++ b/Examples/Plugins/ElevationFilter/CMakeLists.txt
@@ -6,6 +6,9 @@ find_package(ParaView REQUIRED)
 option(BUILD_SHARED_LIBS "Build shared libraries" ON)
 enable_testing()
 
+# Required for python testing  
+set(_vtk_build_TEST_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/Testing/Temporary)
+
 include(GNUInstallDirs)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}")
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR}")
