--- a/Examples/Plugins/ElevationFilter/Plugin/Testing/CMakeLists.txt
+++ b/Examples/Plugins/ElevationFilter/Plugin/Testing/CMakeLists.txt
@@ -6,3 +6,13 @@ if (PARAVIEW_BUILD_QT_GUI)
     BASELINE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Data/Baseline
     TEST_SCRIPTS TestXML.xml)
 endif()
+
+if (PARAVIEW_ENABLE_PYTHON)
+  file(GENERATE
+       OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/TestPython.py
+       INPUT ${CMAKE_CURRENT_SOURCE_DIR}/TestPython.py.in)
+  set(_vtk_build_TEST_FILE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
+  paraview_add_test_python(
+    NO_RT DIRECT_DATA
+    TestPython.py)
+endif()
