don't search for plugins in static builds
In static builds, we should not be looking for shared libs for plugins
to load -- which are not present anyways.

fixes #19460

--- a/ParaViewCore/ClientServerCore/Core/CMakeLists.txt
+++ b/ParaViewCore/ClientServerCore/Core/CMakeLists.txt
@@ -97,6 +97,7 @@ endif ()
 set_property(SOURCE vtkPVPluginTracker.cxx APPEND
   PROPERTY
     COMPILE_DEFINITIONS
+      "BUILD_SHARED_LIBS=${built_shared}"
       "PARAVIEW_RELATIVE_LIBPATH=\"${libdir_relpath}\""
       "PARAVIEW_SUBDIR=\"paraview${paraview_version_suffix}/plugins\"")
 
