ParaViewTestInstall: build the same way ParaView was built

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1084,6 +1084,7 @@ endif()
 if (BUILD_TESTING AND PARAVIEW_INSTALL_DEVELOPMENT_FILES)
   add_test( NAME pv.TestDevelopmentInstall
     COMMAND ${CMAKE_COMMAND}
+    -DBUILD_SHARED_LIBS:BOOL=${BUILD_SHARED_LIBS}
     -DPARAVIEW_BINARY_DIR:PATH=${CMAKE_BINARY_DIR}
     -DPARAVIEW_INSTALL_DIR:PATH=${CMAKE_INSTALL_PREFIX}
     -DPARAVIEW_SOURCE_DIR:PATH=${CMAKE_SOURCE_DIR}
