--- a/Wrapping/Python/CMakeLists.txt
+++ b/Wrapping/Python/CMakeLists.txt
@@ -72,7 +72,7 @@ if (NOT BUILD_SHARED_LIBS)
   # provide/generate.
   set(_paraview_python_files)
   foreach (_paraview_module IN LISTS paraview_modules)
-    vtk_module_get_property("${_paraview_module}"
+    _vtk_module_get_module_property("${_paraview_module}"
       PROPERTY "python_modules"
       VARIABLE _paraview_module_python_files)
     list(APPEND _paraview_python_files
