--- a/CMake/pqPropertyWidgetInterface.cxx.in
+++ b/CMake/pqPropertyWidgetInterface.cxx.in
@@ -49,9 +49,7 @@ SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 }
 
 //-----------------------------------------------------------------------------
-@_paraview_property_widget_CLASS_NAME@PWIImplementation::~@_paraview_property_widget_CLASS_NAME@PWIImplementation()
-{
-}
+@_paraview_property_widget_CLASS_NAME@PWIImplementation::~@_paraview_property_widget_CLASS_NAME@PWIImplementation() = default;
 
 //-----------------------------------------------------------------------------
 pqPropertyWidget* @_paraview_property_widget_CLASS_NAME@PWIImplementation::createWidgetForProperty(
