--- a/CMake/pqPropertyWidgetInterface.cxx.in
+++ b/CMake/pqPropertyWidgetInterface.cxx.in
@@ -66,7 +66,7 @@ pqPropertyWidget* @_paraview_property_widget_CLASS_NAME@PWIImplementation::creat
   Q_UNUSED(smproxy);
   Q_UNUSED(smproperty);
   Q_UNUSED(parentWidget);
-  return NULL;
+  return nullptr;
 }
 
 
@@ -85,7 +85,7 @@ pqPropertyWidget* @_paraview_property_widget_CLASS_NAME@PWIImplementation::creat
   Q_UNUSED(smproxy);
   Q_UNUSED(smgroup);
   Q_UNUSED(parentWidget);
-  return NULL;
+  return nullptr;
 }
 
 //-----------------------------------------------------------------------------
@@ -102,5 +102,5 @@ pqPropertyWidgetDecorator* @_paraview_property_widget_CLASS_NAME@PWIImplementati
   Q_UNUSED(type);
   Q_UNUSED(config);
   Q_UNUSED(widget);
-  return NULL;
+  return nullptr;
 }
