paraview_plugin: prevent clang-tidy from warning about a trivial ctor
Instead of trying to match the logic for when it ends up being a no-op
ctor, just call a function to handle it. This also gives a better name
to what is happening in that code.

--- a/CMake/paraview_plugin.cxx.in
+++ b/CMake/paraview_plugin.cxx.in
@@ -131,7 +131,9 @@ void @_paraview_build_plugin@Plugin::GetPythonSourceList(std::vector<std::string
 #endif
 
 //-----------------------------------------------------------------------------
-@_paraview_build_plugin@Plugin::@_paraview_build_plugin@Plugin()
+namespace
+{
+void initialize_plugin_qt_resources()
 {
 #if !_paraview_add_plugin_built_shared && _paraview_add_plugin_with_resources
   // For static builds, initialize the Qt resources.
@@ -141,6 +143,13 @@ void @_paraview_build_plugin@Plugin::GetPythonSourceList(std::vector<std::string
   // For static builds, initialize the Qt plugin.
   Q_IMPORT_PLUGIN(@_paraview_build_plugin@Plugin)
 #endif
+}
+}
+
+//-----------------------------------------------------------------------------
+@_paraview_build_plugin@Plugin::@_paraview_build_plugin@Plugin()
+{
+  initialize_plugin_qt_resources();
 }
 
 //-----------------------------------------------------------------------------
