Simple test that saves multiblock dataset on processor 0 to an Exodus file

--- a/Applications/ParaView/Testing/XML/CMakeLists.txt
+++ b/Applications/ParaView/Testing/XML/CMakeLists.txt
@@ -532,6 +532,7 @@ SET (TESTS_WITH_INLINE_COMPARES
   RenderNan.xml
   ResetToVisibleRange.xml
   Ruler.xml
+  SaveExodus.xml
   SelectionLinkParallelCoordinatesView.xml
   SaveLargeScreenshot.xml
   Slice.xml
