--- a/CMake/paraview_client_main.cxx.in
+++ b/CMake/paraview_client_main.cxx.in
@@ -86,7 +86,7 @@ int main(int argc, char* argv[])
   // always request a non-stereo format; when using quadbuffer stereo, we
   // request stereo capable format for the individual `QVTKOpenGLWindow`
   // instance.
-  QSurfaceFormat::setDefaultFormat(QVTKRenderWindowAdapter::defaultFormat(/*supports_stereo=*/false));
+  QSurfaceFormat::setDefaultFormat(QVTKRenderWindowAdapter::defaultFormat(/*stereo_capable=*/false));
 
   QApplication qtapp(argc, argv);
   // QApplication docs suggest resetting to "C" after the QApplication is
