clang-tidy: call static methods through the full name

--- a/CMake/paraview_client_main.cxx.in
+++ b/CMake/paraview_client_main.cxx.in
@@ -107,6 +107,6 @@ int main(int argc, char* argv[])
     case InitializerT::ExitFailure:
       return EXIT_FAILURE;
     case InitializerT::RunApplication:
-      return qtapp.exec();
+      return QApplication::exec();
   }
 }
