--- a/ParaViewCore/VTKExtensions/Default/Testing/CMakeLists.txt
+++ b/ParaViewCore/VTKExtensions/Default/Testing/CMakeLists.txt
@@ -4,7 +4,7 @@ vtk_module_test_data(
 
 add_subdirectory(Cxx)
 
-if (PARAVIEW_ENABLE_PYTHON)
+if (PARAVIEW_USE_PYTHON)
   vtk_module_test_data(
     Data/can.ex2)
 
