--- a/ParaViewCore/ServerManager/Default/Testing/CMakeLists.txt
+++ b/ParaViewCore/ServerManager/Default/Testing/CMakeLists.txt
@@ -8,7 +8,7 @@ vtk_module_test_data(
 
 add_subdirectory(Cxx)
 
-if (PARAVIEW_ENABLE_PYTHON)
+if (PARAVIEW_USE_PYTHON)
   vtk_module_test_data(
     Data/FileSeries/,REGEX:.*
     Data/PythonProgrammableFilterParameters.xml
